<resources>
    <string name="app_name">Calculate Marks</string>
    <string name="heading">Students Marks Calculator</string>
    <string name="student_name">Student Name</string>
    <string name="image">image</string>
    <string name="hintName">Raushan Kumar</string>
    <string name="sub_1">Sub-1</string>
    <string name="out_of_100">out of 100</string>
    <string name="sub_2">Sub-2</string>
    <string name="sub_3">Sub-3</string>
    <string name="sub_4">Sub-4</string>
    <string name="sub_5">Sub-5</string>
    <string name="sub_6">Sub-6</string>
    <string name="sub_7">Sub-7</string>
    <string name="sub_8">Sub-8</string>
    <string name="average">Average</string>
    <string name="_99">99%</string>
    <string name="grade">Grade</string>
    <string name="_10">10</string>
    <string name="calculate_your_marks">Calculate Your Marks</string>
    <string name="out_od_10">out of 10</string>
    <string name="hey">Hey</string>
    <string name="percentage">Percentage</string>
    <string name="your_total_marks">Your Total Marks</string>
    <string name="grade_point">Grade Point</string>
</resources>