<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/smc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/heading"
            android:textColor="#0097A7"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:layout_gravity="center"/>

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:src="@drawable/gpa" />
    </LinearLayout>

    <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/scrollView"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:layout_marginTop="10dp"
           android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/sname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/sname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_1"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_2"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_3"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_4"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_5"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_6"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub66"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_7"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sub8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub_8"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/sub88"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/average" />

        <TextView
            android:id="@+id/avgmarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_of_100"
            android:textSize="20sp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/gradePoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/out_od_10"
            android:textSize="20sp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_your_marks"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="#0097A7"
            android:onClick="clickbtn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
       </LinearLayout>
   </ScrollView>
</LinearLayout>